kubernetes/web_network-np.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: web_network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/web_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/web_network: "true"
